--- a/yolo_v4/yolo_v4.vcxproj
+++ b/yolo_v4/yolo_v4.vcxproj
@@ -24,6 +24,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>yolov4</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>yolo_v3</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -145,16 +146,19 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>C:\OpenCV\opencv-4.5.1_release\build\install\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>C:\OpenCV\opencv-4.5.1_release\build\install\x64\vc16\lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opencv_bgsegm451.lib;opencv_calib3d451.lib;opencv_ccalib451.lib;opencv_core451.lib;opencv_cudaarithm451.lib;opencv_cudabgsegm451.lib;opencv_cudacodec451.lib;opencv_cudafeatures2d451.lib;opencv_cudafilters451.lib;opencv_cudaimgproc451.lib;opencv_cudalegacy451.lib;opencv_cudaobjdetect451.lib;opencv_cudaoptflow451.lib;opencv_cudastereo451.lib;opencv_cudawarping451.lib;opencv_cudev451.lib;opencv_dnn451.lib;opencv_dnn_objdetect451.lib;opencv_dnn_superres451.lib;opencv_dpm451.lib;opencv_features2d451.lib;opencv_flann451.lib;opencv_fuzzy451.lib;opencv_gapi451.lib;opencv_hdf451.lib;opencv_hfs451.lib;opencv_highgui451.lib;opencv_img_hash451.lib;opencv_imgcodecs451.lib;opencv_imgproc451.lib;opencv_intensity_transform451.lib;opencv_line_descriptor451.lib;opencv_mcc451.lib;opencv_ml451.lib;opencv_objdetect451.lib;opencv_optflow451.lib;opencv_saliency451.lib;opencv_shape451.lib;opencv_stitching451.lib;opencv_superres451.lib;opencv_surface_matching451.lib;opencv_text451.lib;opencv_video451.lib;opencv_videoio451.lib;opencv_xfeatures2d451.lib;opencv_ximgproc451.lib;opencv_xobjdetect451.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="yolo_v4.cpp" />
+    <ClCompile Include="yolo_v3.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.hpp" />
