Всё сложено в один большой репо: - инструкции по подготовке данных и разметке изображений, - примеры интеграции с OpenCV

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
-x64/
-Debug/
-Release/
-.vs/
+# Коренной файл
+*.zip
+*.tar.gz
+
+
+*.pb
+*.weights
+
+.idea/
+
+frameworks/darknet/
+frameworks/tensorflow/
+tensorflow_models/
