--- a/integration_with_opencv/angle_accuracy/angle_accuracy.vcxproj
+++ b/integration_with_opencv/angle_accuracy/angle_accuracy.vcxproj
@@ -236,12 +236,14 @@
     <ClCompile Include="functions.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Marker.cpp" />
+    <ClCompile Include="Statistics.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AUV.h" />
     <ClInclude Include="FPS.h" />
     <ClInclude Include="functions.h" />
     <ClInclude Include="Marker.h" />
+    <ClInclude Include="Statistics.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
