- Подобраны параметры find_contours/ - Отлажен метод в void AUV::filter_objects_2(...) - Проведён эксперимент по измерению точности углового положения с YOLO v4

--- a/integration_with_opencv/angle_accuracy_net/angle_accuracy_net.vcxproj
+++ b/integration_with_opencv/angle_accuracy_net/angle_accuracy_net.vcxproj
@@ -139,13 +139,14 @@
       <PrecompiledHeader>
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
-      <Optimization>MaxSpeed</Optimization>
+      <Optimization>Disabled</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>C:\OpenCV\opencv-4.5.1_release\build\install\include;C:\OpenCV\eigen-3.4-rc1</AdditionalIncludeDirectories>
+      <WholeProgramOptimization>false</WholeProgramOptimization>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
