- Проведён эксперимент по узмерению угла по ARuCo

--- a/integration_with_opencv/angle_accuracy_aruco/angle_accuracy_aruco.vcxproj.filters
+++ b/integration_with_opencv/angle_accuracy_aruco/angle_accuracy_aruco.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="main.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="..\angle_accuracy_net\Statistics.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\angle_accuracy_net\Statistics.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
