--- a/integration_with_opencv/angle_accuracy_aruco/angle_accuracy_aruco.vcxproj
+++ b/integration_with_opencv/angle_accuracy_aruco/angle_accuracy_aruco.vcxproj
@@ -157,7 +157,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\angle_accuracy_net\Statistics.cpp" />
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\angle_accuracy_net\Statistics.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
