--- a/integration_with_opencv/angle_accuracy/cascade/angle_accuracy.vcxproj
+++ b/integration_with_opencv/angle_accuracy/cascade/angle_accuracy.vcxproj
@@ -32,6 +32,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>angle_accuracy</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>angle_accuracy_cascade</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
