- Проведено повторное сравнение точности распознавания каскада Хаара и нейросети на видео с меньшими углами. Результат почти идентичный. - Исходные видеозаписи и результаты исследований см. в  репозитории дипломного проекта - Рез-ты измерений теперь в виде списка Python, очень удобно)

--- a/integration_with_opencv/measure_accuracy/net/measure_accuracy.vcxproj.filters
+++ b/integration_with_opencv/measure_accuracy/net/measure_accuracy.vcxproj.filters
@@ -11,4 +11,7 @@
       <UniqueIdentifier>{1c475c4e-ad24-4a02-a766-2655132b5d7a}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Experiment.h" />
+  </ItemGroup>
 </Project>
