--- a/integration_with_opencv/measure_accuracy/net/measure_accuracy.vcxproj
+++ b/integration_with_opencv/measure_accuracy/net/measure_accuracy.vcxproj
@@ -24,7 +24,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>yolo_v4_cuda1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>measure_accuracy</ProjectName>
+    <ProjectName>measure_accuracy_net</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
