--- a/integration_with_opencv/angle_accuracy/aruco/angle_accuracy_aruco.vcxproj
+++ b/integration_with_opencv/angle_accuracy/aruco/angle_accuracy_aruco.vcxproj
@@ -145,23 +145,23 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\OpenCV\opencv-4-4-0-cuda-dnn\build\install\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\OpenCV\opencv-4.5.1._release_debug_cuda11\build\install\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\OpenCV\opencv-4-4-0-cuda-dnn\build\install\x64\vc16\lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opencv_alphamat440.lib;opencv_aruco440.lib;opencv_bgsegm440.lib;opencv_bioinspired440.lib;opencv_calib3d440.lib;opencv_ccalib440.lib;opencv_core440.lib;opencv_cudaarithm440.lib;opencv_cudabgsegm440.lib;opencv_cudacodec440.lib;opencv_cudafeatures2d440.lib;opencv_cudafilters440.lib;opencv_cudaimgproc440.lib;opencv_cudalegacy440.lib;opencv_cudaobjdetect440.lib;opencv_cudaoptflow440.lib;opencv_cudastereo440.lib;opencv_cudawarping440.lib;opencv_cudev440.lib;opencv_datasets440.lib;opencv_dnn440.lib;opencv_dnn_objdetect440.lib;opencv_dnn_superres440.lib;opencv_dpm440.lib;opencv_face440.lib;opencv_features2d440.lib;opencv_flann440.lib;opencv_fuzzy440.lib;opencv_gapi440.lib;opencv_hdf440.lib;opencv_hfs440.lib;opencv_highgui440.lib;opencv_img_hash440.lib;opencv_imgcodecs440.lib;opencv_imgproc440.lib;opencv_intensity_transform440.lib;opencv_line_descriptor440.lib;opencv_ml440.lib;opencv_objdetect440.lib;opencv_optflow440.lib;opencv_phase_unwrapping440.lib;opencv_photo440.lib;opencv_plot440.lib;opencv_quality440.lib;opencv_rapid440.lib;opencv_reg440.lib;opencv_rgbd440.lib;opencv_saliency440.lib;opencv_shape440.lib;opencv_stereo440.lib;opencv_stitching440.lib;opencv_structured_light440.lib;opencv_superres440.lib;opencv_surface_matching440.lib;opencv_text440.lib;opencv_tracking440.lib;opencv_video440.lib;opencv_videoio440.lib;opencv_videostab440.lib;opencv_xfeatures2d440.lib;opencv_ximgproc440.lib;opencv_xobjdetect440.lib;opencv_xphoto440.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\OpenCV\opencv-4.5.1._release_debug_cuda11\build\install\x64\vc16\lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opencv_aruco451.lib;opencv_bgsegm451.lib;opencv_calib3d451.lib;opencv_ccalib451.lib;opencv_core451.lib;opencv_cudaarithm451.lib;opencv_cudabgsegm451.lib;opencv_cudacodec451.lib;opencv_cudafeatures2d451.lib;opencv_cudafilters451.lib;opencv_cudaimgproc451.lib;opencv_cudalegacy451.lib;opencv_cudaobjdetect451.lib;opencv_cudaoptflow451.lib;opencv_cudastereo451.lib;opencv_cudawarping451.lib;opencv_cudev451.lib;opencv_dnn451.lib;opencv_dnn_objdetect451.lib;opencv_dpm451.lib;opencv_face451.lib;opencv_features2d451.lib;opencv_flann451.lib;opencv_fuzzy451.lib;opencv_gapi451.lib;opencv_hdf451.lib;opencv_hfs451.lib;opencv_highgui451.lib;opencv_img_hash451.lib;opencv_imgcodecs451.lib;opencv_imgproc451.lib;opencv_intensity_transform451.lib;opencv_line_descriptor451.lib;opencv_mcc451.lib;opencv_ml451.lib;opencv_objdetect451.lib;opencv_optflow451.lib;opencv_phase_unwrapping451.lib;opencv_photo451.lib;opencv_plot451.lib;opencv_quality451.lib;opencv_rapid451.lib;opencv_saliency451.lib;opencv_shape451.lib;opencv_surface_matching451.lib;opencv_text451.lib;opencv_tracking451.lib;opencv_video451.lib;opencv_videoio451.lib;opencv_videostab451.lib;opencv_xfeatures2d451.lib;opencv_ximgproc451.lib;opencv_xobjdetect451.lib;opencv_xphoto451.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\angle_accuracy_net\Statistics.cpp" />
+    <ClCompile Include="..\Statistics.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\angle_accuracy_net\Statistics.h" />
+    <ClInclude Include="..\Statistics.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
