--- a/integration_with_opencv/angle_accuracy/net/angle_accuracy_net.vcxproj.filters
+++ b/integration_with_opencv/angle_accuracy/net/angle_accuracy_net.vcxproj.filters
@@ -27,7 +27,7 @@
     <ClCompile Include="Marker.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="Statistics.cpp">
+    <ClCompile Include="..\Statistics.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
@@ -44,7 +44,7 @@
     <ClInclude Include="Marker.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="Statistics.h">
+    <ClInclude Include="..\Statistics.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
